--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<p>Alhumdulillah</p>
     
     <!-- scripts -->
     <script src="script.js"></script>
